fixed gaps

--- a/src/pages/Characters/styles.module.css
+++ b/src/pages/Characters/styles.module.css
@@ -2,7 +2,7 @@
 .cards {
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 20px;
     margin-bottom: 20px;
 }
 
